# em-phi

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yaml  pyproject.toml
docs/: deployment.md  docker.md  gmail-setup.md
src/em_phi/: actions.py  cli.py  config.py  debug.py  decision_log.py  models.py  processor.py
src/em_phi/classifiers/: base.py  claude.py
src/em_phi/providers/: base.py  gmail.py
src/em_phi/web/: app.py  scheduler.py  state.py
src/em_phi/web/routes/: config.py  debug.py  log.py  run.py
src/em_phi/web/templates/: base.html  config.html  debug.html  log.html  login.html  run.html
src/em_phi/web/templates/partials/: rule_fields.html  sender_fields.html
tests/: conftest.py  test_classifier.py  test_config.py  test_processor.py
tests/fixtures/: sample_emails.json
