[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "em-phi"
version = "0.1.0"
description = "Self-hosted AI-powered email filtering for Gmail newsletters"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "anthropic>=0.40",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "apscheduler>=3.10",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "ruamel.yaml>=0.18",
]

[project.scripts]
em-phi = "em_phi.cli:cli"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/em_phi"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
]
